# telegram-analysis

./: README.md  pyproject.toml  useful_resources.md
notebooks/: 01-source-data.ipynb  query2.ipynb
src/telegramanalysor/: authentication.py  download.py
